<resources>
    <string name="app_name">VotingApp</string>
    <string name="signin">LogIn</string>
    <string name="open">Open Navigation</string>
    <string name="close">Close Navigation</string>
    <string name="username">Username</string>
    <string name="pass">Password</string>
    <string name="navigation_drawer_open">navigation_drawer_open</string>
    <string name="navigation_drawer_close">navigation_drawer_close</string>
    <string name="create_poll_title">create_poll_title</string>
    <string name="home_title">home_title</string>
    <string name="show_polls_title">show_polls_title</string>
    <string name="sign_up_here">SIGN UP HERE</string>
    <string name="Username">Username</string>
    <string name="sign_up">Sign Up</string>
    <string name="college_id">College ID</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">password</string>
    <string name="already_have_account">Already have a account?</string>
    <string name="login">login</string>
</resources>