<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:hapticFeedbackEnabled="false"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="310dp"
        android:layout_height="57dp"
        android:layout_marginTop="40dp"
        android:text="@string/sign_up_here"
        android:textAlignment="center"
        android:textColor="#F8693C"
        android:textSize="40sp"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username"
        android:layout_width="279dp"
        android:layout_height="54dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/editor_background"
        android:ems="10"
        android:hint="@string/Username"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        app:layout_constraintStart_toStartOf="@+id/fullname"
        app:layout_constraintTop_toBottomOf="@+id/fullname"
        android:autofillHints="" />

    <Button
        android:id="@+id/buttonSignUp"
        style="@android:style/Widget.Button"
        android:layout_width="191dp"
        android:layout_height="43dp"
        android:background="@drawable/btn_orange"
        android:onClick="gotoLogin"
        android:text="@string/sign_up"
        android:textColor="#EFECE6"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmpassword" />

    <EditText
        android:id="@+id/collegeid"
        android:layout_width="279dp"
        android:layout_height="54dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/editor_background"
        android:ems="10"
        android:hint="@string/college_id"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email"
        android:autofillHints="" />

    <EditText
        android:id="@+id/password"
        android:layout_width="279dp"
        android:layout_height="54dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/editor_background"
        android:ems="10"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        app:layout_constraintStart_toStartOf="@+id/collegeid"
        app:layout_constraintTop_toBottomOf="@+id/collegeid"
        android:autofillHints="" />

    <EditText
        android:id="@+id/fullname"
        android:layout_width="279dp"
        android:layout_height="54dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/editor_background"
        android:ems="10"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        app:autoSizeTextType="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:autofillHints="" />

    <EditText
        android:id="@+id/email"
        android:layout_width="279dp"
        android:layout_height="54dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/editor_background"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingTop="7dp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/username"
        app:layout_constraintTop_toBottomOf="@+id/username"
        android:autofillHints="" />

    <EditText
        android:id="@+id/confirmpassword"
        android:layout_width="279dp"
        android:layout_height="54dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/editor_background"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingTop="6dp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password"
        android:autofillHints="" />

</androidx.constraintlayout.widget.ConstraintLayout>
