<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_button_main2"
    android:hapticFeedbackEnabled="false"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/img_5"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-16dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="232dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="84dp"
            android:layout_marginTop="72dp"
            android:layout_marginEnd="85dp"
            android:fontFamily="@font/archivo_black"
            android:text="LOGIN"
            android:textAlignment="center"
            android:textColor="#030929"
            android:textSize="48sp"
            android:textStyle="normal" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="195dp"
            android:layout_height="113dp"
            android:layout_below="@+id/textView"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="108dp"
            android:layout_marginTop="46dp"
            android:layout_marginEnd="108dp"
            app:srcCompat="@drawable/image" />

        <Button
            android:id="@+id/buttonSignUp"
            style="@android:style/Widget.Button"
            android:layout_width="132dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password2"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="149dp"
            android:layout_marginTop="41dp"
            android:layout_marginEnd="128dp"
            android:background="@drawable/btn_orange"
            android:backgroundTint="#030929"
            android:text="@string/signin"
            android:textColor="#EFECE6"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/username2"
            style="@style/ButtonForMain2"
            android:layout_width="227dp"
            android:layout_height="52dp"
            android:layout_below="@+id/imageView2"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="108dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="76dp"
            android:background="@drawable/custom_button_main2"
            android:drawableRight="@drawable/ic_user"
            android:drawableTint="#F4F3F3"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            android:textAlignment="textStart"
            android:textColor="#DDD5D5"
            android:textColorHint="#DDD5D5"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/password2"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_below="@+id/username2"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="107dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="75dp"
            android:background="@drawable/custom_button_main2"
            android:drawableRight="@drawable/ic_baseline_lock_24"
            android:drawableTint="#F1E8E8"
            android:ems="10"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:textColor="#DDD5D5"
            android:textColorHint="#DDD5D5" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
